overlays/padmin1/drone-auth-config-plugin/base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-auth-config-plugin
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: app-qa-drone-auth-config-plugin
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: drone-auth-config-plugin
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: drone-auth-config-plugin         
              topologyKey: kubernetes.io/hostname
            weight: 10
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          value: "1565734736518"
        - name: INSTANCE
          value: drone-auth-config-plugin.dev.admin.sharecare.com
        - name: REGION
          value: US
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1565734736518"
        - name: MAESTRO_INSTANCE
          value: drone-auth-config-plugin.dev.admin.sharecare.com
        - name: MAESTRO_HOSTS
          value: drone-auth-config-plugin.dev.admin.sharecare.com
        - name: MAESTRO_REGION
          value: US
        - name: MAESTRO_ALL_REGIONS
          value: US
        - name: GITHUB_TOKEN
          valueFrom:
            secretKeyRef:
              key: GITHUB_TOKEN
              name: drone-auth-config-plugin
        - name: PLUGIN_SECRET
          valueFrom:
            secretKeyRef:
              key: PLUGIN_SECRET
              name: drone-auth-config-plugin
        - name: SSO_KEYWORD_SECRET
          valueFrom:
            secretKeyRef:
              key: SSO_KEYWORD_SECRET
              name: drone-auth-config-plugin
        - name: SSO_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: SSO_CLIENT_SECRET
              name: drone-auth-config-plugin
        image: nexus.admin.sharecare.com/drone-auth-config-plugin:1.1.0-70
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: drone-auth-config-plugin
            path: /healthcheck?livenessProbe
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: drone-auth-config-plugin
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: drone-auth-config-plugin
            path: /healthcheck?readinessProbe
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: nexus
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
