overlays/padmin1/drone-auth-config-plugin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probepath: /healthcheck?readinessProbe
  labels:
    app: drone-auth-config-plugin
  name: drone-auth-config-plugin
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: drone-auth-config-plugin
  sessionAffinity: None
  type: ClusterIP
